hphp/hack/test/typecheck/like_types/like_casts3.php.exp
WARN: File "like_casts3.php", line 4, characters 3-11:
This `as` assertion will always succeed and hence is redundant. The expression on the left has a type `dynamic` which is a subtype of `~Tf`. (Warn[12011])
WARN: File "like_casts3.php", line 8, characters 3-11:
This `as` assertion will always succeed and hence is redundant. The expression on the left has a type `dynamic` which is a subtype of `~Tg`. (Warn[12011])
WARN: File "like_casts3.php", line 12, characters 3-11:
This `as` assertion will always succeed and hence is redundant. The expression on the left has a type `dynamic` which is a subtype of `~Th`. (Warn[12011])
ERROR: File "like_casts3.php", line 4, characters 9-11:
Invalid `as` expression hint (Typing[4195])
  File "like_casts3.php", line 4, characters 10-11:
  The `as` operator cannot be used with an erased generic type parameter
ERROR: File "like_casts3.php", line 8, characters 9-11:
Invalid `as` expression hint (Typing[4195])
  File "like_casts3.php", line 8, characters 10-11:
  The `as` operator cannot be used with an erased generic type parameter
ERROR: File "like_casts3.php", line 12, characters 9-11:
Invalid `as` expression hint (Typing[4195])
  File "like_casts3.php", line 12, characters 10-11:
  The `as` operator cannot be used with an erased generic type parameter
